fixed z-index of graph and cleaned up some animation

--- a/views/css/dashboard.scss
+++ b/views/css/dashboard.scss
@@ -407,7 +407,7 @@ html {
                 left: 0px;
                 width: 100%;
                 height: 100%;
-                z-index: 300;
+                z-index: 99;
                 line {
                   fill: none;
                   stroke: #999999;
